# druid-minimal-form-example

./: Cargo.toml
src/: form.rs  main.rs  validators.rs
src/form/: formatters.rs  mod.rs  widgets.rs
src/validation/: formatters.rs  mod.rs  widgets.rs
