[package]
name = "druid-minimal-form-validation"
version = "0.1.0"
authors = ["Arif Driessen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "image", "png"] }
regex = "1.5"
once_cell = "1.7.2"